# ink-erc1155

./: Cargo.toml  README.md  deploy-all.sh
compiled/: collectables.contract  collectables.wasm  generalTicket.contract  generalTicket.wasm  redeemables.contract  redeemables.wasm  seatedTicket.contract  seatedTicket.wasm
contracts/collectables/: Cargo.toml  lib.rs
contracts/endDate/: Cargo.toml  lib.rs
contracts/erc1155/: Cargo.toml  lib.rs
contracts/erc1155/redeemables/: Cargo.toml  lib.rs
contracts/generalTicket/: Cargo.toml  lib.rs
contracts/redeemables/: Cargo.toml  lib.rs
contracts/seatedTicket/: Cargo.toml  lib.rs
crates/allocator/src/: bump.rs
crates/engine/src/: exec_context.rs  ext.rs  hashing.rs  test_api.rs  tests.rs
crates/env/src/: api.rs  arithmetic.rs  backend.rs  chain_extension.rs  lib.rs  types.rs
crates/env/src/call/: call_builder.rs  create_builder.rs  mod.rs
crates/env/src/engine/: mod.rs
crates/env/src/engine/experimental_off_chain/: impls.rs  test_api.rs  tests.rs  types.rs
crates/env/src/engine/off_chain/: call_data.rs  chain_extension.rs  hashing.rs  impls.rs  mod.rs  test_api.rs  typed_encoded.rs
crates/env/src/engine/on_chain/: ext.rs  impls.rs  mod.rs
crates/lang/codegen/src/generator/: chain_extension.rs  contract.rs  cross_calling.rs  dispatch.rs  events.rs  item_impls.rs  metadata.rs  mod.rs  storage.rs  trait_def.rs
crates/lang/ir/src/: lib.rs
crates/lang/ir/src/ast/: attr_args.rs  mod.rs
crates/lang/ir/src/ir/: attrs.rs  blake2.rs  chain_extension.rs  config.rs  ink_test.rs  item_mod.rs  mod.rs  trait_def.rs
crates/lang/ir/src/ir/item/: event.rs  (+2 more)
crates/lang/macro/tests/: unique_topics.rs
crates/lang/src/: dispatcher.rs  env_access.rs  lib.rs  traits.rs
crates/metadata/src/: specs.rs  utils.rs
crates/metadata/src/layout/: mod.rs
crates/primitives/benches/: bench.rs
crates/primitives/src/: key.rs  lib.rs
crates/storage/benches/: bench_binary_heap.rs  bench_bitstash.rs  bench_hashmap.rs  bench_lazy.rs  bench_stash.rs  bench_vec.rs
crates/storage/src/: hashmap_entry_api_tests.rs  lib.rs  memory.rs  pack.rs
crates/storage/src/alloc/: allocation.rs  allocator.rs  init.rs  mod.rs  tests.rs
crates/storage/src/alloc/boxed/: impls.rs  mod.rs  storage.rs  tests.rs
crates/storage/src/collections/: mod.rs
crates/storage/src/collections/binary_heap/: children.rs  children_vec.rs  impls.rs  mod.rs  reverse.rs  storage.rs  tests.rs
crates/storage/src/collections/bitstash/: counts.rs  mod.rs  storage.rs  tests.rs
crates/storage/src/lazy/: cache_cell.rs  entry.rs  lazy_array.rs  lazy_cell.rs  lazy_hmap.rs  lazy_imap.rs  mod.rs
crates/storage/src/traits/: mod.rs  optspec.rs
(+50 files in other folders)
