[package]
name = "generalTicket"
version = "3.0.0-rc5"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

# [dependencies]
# ink_primitives = { version = "3.0.0-rc7", default-features = false }
# ink_metadata = { version = "3.0.0-rc7", default-features = false, features = ["derive"], optional = true }
# ink_env = { version = "3.0.0-rc7", default-features = false }
# ink_storage = { version = "3.0.0-rc7",default-features = false }
# ink_lang = { version = "3.0.0-rc7", default-features = false }
# ink_prelude = { version = "3.0.0-rc7", default-features = false }

[dependencies]
ink_primitives = { version = "3.0.0-rc5", path = "../../crates/primitives", default-features = false }
ink_metadata = { version = "3.0.0-rc5", path = "../../crates/metadata", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc5", path = "../../crates/env", default-features = false }
ink_storage = { version = "3.0.0-rc5", path = "../../crates/storage", default-features = false }
ink_lang = { version = "3.0.0-rc5", path = "../../crates/lang", default-features = false }
ink_prelude = { version = "3.0.0-rc5", path = "../../crates/prelude", default-features = false }

# scale = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
# scale-info = { version = "1", default-features = false, features = ["derive"], optional = true }
scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }

# adder = { version = "3.0.0-rc5", path = "adder", default-features = false, features = ["ink-as-dependency"] }
# subber = { version = "3.0.0-rc5", path = "subber", default-features = false, features = ["ink-as-dependency"] }
# accumulator = { version = "3.0.0-rc5", path = "accumulator", default-features = false, features = ["ink-as-dependency"] }
scale-info = { version = "0.6", default-features = false, features = ["derive"], optional = true }
redeemables = { path = "../redeemables", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "generalTicket"
path = "lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
    "redeemables/std",
]
ink-as-dependency = []
ink-experimental-engine = ["ink_env/ink-experimental-engine"]
# overflow-checks= false

[profile.release]
overflow-checks = false
